style.css
/**{
    border: 2px solid black;
}*/

body{
    background-color: #222831;
}

h1 {
  font-size: 36px;
  color: #ff5722; /* Same orange as your buttons for strong visual identity */
  font-family: 'Segoe UI', 'Roboto', sans-serif;
  font-weight: 700;
  text-align: center;
  margin-top: 30px;
  letter-spacing: 1px;
}
.container{
    height:450px;
    width:325px;
    background-color: grey;
    display:flex;
    flex-direction: column;
    align-items: center;
    box-shadow: 5px 5px 10px ;
    border-radius:10px;
    margin:auto;
}

#display{
    height:100px;
    width:300px;
    margin:10px;
    background-color: white;
    text-align: right;
    font-size: 40px;
    font-weight: 900;
    font-family: 'monospace' ,sans-serif;
    overflow-wrap: anywhere;
    display:flex;
    align-items: flex-end;
    justify-content:right;
    border-radius:10px;
}

#resetPanel{
    height:50px;
    width:300px;
    margin:10px;
    display:flex;
    justify-content: space-around;
    align-items:center;
}

#resetButton{
    width: 40%;
    height:80%;
    background-color: rgb(139, 139, 224);
    box-shadow: 5px 5px 10px ;
    border-radius:10px;
}

#backspaceButton{
    width:40%;
    height:80%;
    background-color: rgb(219, 144, 144);
    box-shadow: 5px 5px 10px ;
    border-radius:10px;
}
#numbersAndSymbols{
    height:250px;
    width:300px;
    margin:10px;
    display:flex;
    justify-content: center;
    flex-wrap:wrap;
}

.numAndSym{
    width:25%;
    height:25%;
    box-shadow: 5px 5px 10px ;
    border-radius:20px;
    background-color: rgb(236, 98, 47);
    font-weight: 900;
    font-size:30px;
}

